flowerpots scrollbar fix

--- a/app/(site)/globals.css
+++ b/app/(site)/globals.css
@@ -337,13 +337,16 @@ input[type='checkbox']:focus-visible + label .custom-checkbox {
   background: rgba(34, 71, 34, 0.32) !important;
   height: 6px !important;
   bottom: 0 !important;
+  width: 100% !important;
+  left: 0 !important;
 }
 
 .slider .swiper-slide {
-  width: auto;
-  margin-right: 40px;
-  display: flex;
-  align-items: flex-end;
+  @apply flex mr-10 w-auto items-end;
+}
+
+.slider .swiper-slide:last-child {
+  @apply mr-0;
 }
 
 @media (min-width: 768px) {
@@ -404,21 +407,16 @@ input[type='checkbox']:focus-visible + label .custom-checkbox {
 
 /*Reviews Slider styles end*/
 
+/*Reviews*/
+
 .reviews-card::before {
   content: '';
-  width: 62px;
-  height: 41px;
-  position: absolute;
-  top: 37px;
+  @apply bg-no-repeat absolute w-[62px] h-[41px] top-[37px];
   background-image: url('/icons/quotes.svg');
-  background-repeat: no-repeat;
 }
 @media (min-width: 768px) {
   .reviews-card::before {
-    content: '';
-    width: 82px;
-    height: 55px;
-    top: 70px;
+    @apply w-[82px] h-[55px] top-[70px];
   }
 }
 
@@ -429,3 +427,5 @@ input[type='checkbox']:focus-visible + label .custom-checkbox {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+/*Reviews end*/
